<resources>
    <string name="app_name">BC-Parking1beta</string>
    <string name="add_park_item_content_description">Add new park item</string>
    <string name="name_hint">Name:</string>
    <string name="count_hint">Count:</string>
    <string name="save_btn">Save</string>
    <string name="count1">1</string>
    <string name="count2">2</string>
    <string name="count3">3</string>
    <string name="count4">4</string>
    <string name="count5">5</string>
    <string name="count6">6</string>
    <string name="count7">7</string>
    <string name="count8">8</string>
    <string name="count9">9</string>
    <string name="count10">10</string>
    <string name="count11">11</string>
    <string name="count12">12</string>
    <string name="count13">13</string>
    <string name="count14">14</string>
    <string name="count15">15</string>
    <string name="count16">16</string>
    <string name="count17">17</string>
    <string name="count18">18</string>
    <string name="count19">19</string>
    <string name="count20">20</string>
    <string name="count21">21</string>
    <string name="count22">22</string>
    <string name="count23">23</string>
    <string name="count24">24</string>
    <string name="count25">25</string>
    <string name="count26">26</string>
    <string name="count27">27</string>
    <string name="count28">28</string>
    <string name="count29">29</string>
    <string name="count30">30</string>
    <string name="outside_Park_1">Outside Park 1</string>
    <string name="outside_Park_2">Outside Park 2</string>
    <string name="parking_1st_Lvl">Parking 1st Lvl</string>
    <string name="parking_2nd_Lvl">Parking 2nd Lvl</string>
    <string name="parking_3rd_Lvl">Parking 3rd Lvl</string>
    <string name="parking_4th_Lvl">Parking 4th Lvl</string>
    <string name="date_from">date_from</string>
    <string name="date_to">date_to</string>
    <string name="error_input_name">Invalid string</string>
    <string name="error_input_count">Invalid count</string>
    <string name="fragment_date_from">date_from</string>
    <string name="fragment_date_to">date_to</string>
    <string name="fragment_save">save</string>
    <string name="fragment_clear">Clear</string>
    <string name="fragment_firm">firm</string>
    <string name="fragment_fio">FIO</string>
    <string name="fragment_about">about</string>
    <string name="fragment_name">name</string>
    <string name="item_count">130</string>
    <string name="text_title_parking_2lvl">PARKING 2LVL</string>
    <string name="text_title_parking_1lvl">PARKING 1LVL</string>
    <string name="text_title_outside2">ENTER/EXIT Parking BACKyard</string>
</resources>