<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvMain"
    android:layout_width="74dp"
    android:layout_height="49dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:backgroundTint="#49DC6E"
            android:text="@string/item_count"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llDateTo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_date_to_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/date_to"
                android:textAlignment="center"
                android:textColor="#515151"
                android:textSize="14sp"
                android:textStyle="normal|bold"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llInvisible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_date_from" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_about"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_name" />

            <TextView
                android:id="@+id/tv_firm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_firm" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>